--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -469,30 +469,6 @@
           </div>
         </article>
 
-
-
-
-      <article class="card">
-          <div class="body">
-            <div class="text">
-              <h3>The Adventure Game</h3>
-              <p>Spin the randomizer for a fun prompt (e.g., “I’m packing my bag”). The first student starts: “I’m packing my bag. I put in a blue pencil.” Each student repeats the full list and adds one item—encourage short, vivid descriptions! Keep going around the group—more than once if it’s small. Great for memory and vocabulary practice!</p>
-            </div>
-            <div class="art-col">
-              <div class="art-frame">
-                <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/adventure-game-icon.png?raw=true"
-                  alt="The Adventure Game icon"
-                  loading="lazy" decoding="async">
-              </div>
-              <a href="https://outreach360-inc.github.io/games/adventure-game.html" target="_blank"><button class="play-btn">PLAY</button></a>
-            </div>
-          </div>
-        </article>
-
-
-
-
       <article class="card">
           <div class="body">
             <div class="text">
@@ -590,6 +566,27 @@
           </div>
         </article>
 
+
+            
+
+
+      <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>The Adventure Game</h3>
+              <p>Spin the randomizer for a fun prompt (e.g., “I’m packing my bag”). The first student starts: “I’m packing my bag. I put in a blue pencil.” Each student repeats the full list and adds one item—encourage short, vivid descriptions! Keep going around the group—more than once if it’s small. Great for memory and vocabulary practice!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/adventure-game-icon.png?raw=true"
+                  alt="The Adventure Game icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/adventure-game.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
 
 
         <article class="card">
@@ -858,12 +855,32 @@
         </article>
 
 
+                        <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Globe</h3>
+              <p>Every day, there is a new Mystery Country. Your goal is to guess the mystery country using the fewest number of guesses. Each incorrect guess will appear on the globe with a colour indicating how close it is to the Mystery Country. The hotter the colour, the closer you are to the answer. Great for geography practice and critical thinking!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/globe-icon.png?raw=true"
+                  alt="Globe icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://globle.org/" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+
       </div>
     </section>
   </main>
 
 </body>
 </html>
+
 
 
 
