--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -753,7 +753,10 @@
 <li>⬜ Gray = letter not in the word</li>
                     </ul>  
                     <p>Great for spelling, vocabulary recall, logical thinking, and word structure!</p>
-
+     </div>
+          </div>
+        </article>
+            
                       <article class="card">
           <div class="body">
             <div class="text">
@@ -880,6 +883,7 @@
 
 </body>
 </html>
+
 
 
 
