--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1037,7 +1037,42 @@
           </div>
         </article>
 
-
+            <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>City Guesser</h3>
+              <p>An online geography trivia game that immerses players in a random video walkthrough of a location. You explore the surroundings to gather visual clues. Using these observations, you guess your location on a map. Great for strengthening geography, spatial awareness, and problem-solving skills!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/city-guesser-icon.png?raw=true"
+                  alt="City Guesser icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://virtualvacation.us/guess" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+            
+            
+            <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>GeoGuesser</h3>
+              <p>An online geography trivia game that immerses players in a random location from Google Street View. You explore the surroundings to gather visual clues, identifying languages, road signs, landscapes, or architecture. Using these observations, you guess your location on a world map, scoring points based on accuracy. Great for strengthening geography, spatial awareness, and problem-solving skills!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/geo-guesser-icon.png?raw=true"
+                  alt="GeoGuesser icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://geoguesser.io" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
 
       <article class="card">
           <div class="body">
@@ -1058,13 +1093,13 @@
         </article>
 
 
-
       </div>
     </section>
   </main>
 
 </body>
 </html>
+
 
 
 
