--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1041,7 +1041,7 @@
           <div class="body">
             <div class="text">
               <h3>City Guesser</h3>
-              <p>An online geography trivia game that immerses players in a random video walkthrough of a location. You explore the surroundings to gather visual clues. Using these observations, you guess your location on a map. Great for strengthening geography, spatial awareness, and problem-solving skills!</p>
+              <p>An online geography trivia game that immerses players in a random video walkthrough of a location. You explore the surroundings to gather visual clues. Using these observations, you guess your location on a map. Great for strengthening geography and problem-solving skills!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1099,6 +1099,7 @@
 
 </body>
 </html>
+
 
 
 
