--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -503,7 +503,60 @@
           </div>
         </article>
 
+            <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>City Guesser</h3>
+              <p>An online geography trivia game that immerses players in a random video walkthrough of a location. You explore the surroundings to gather visual clues. Using these observations, you guess your location on a map. Great for strengthening geography and problem-solving skills!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/city-guesser-icon.png?raw=true"
+                  alt="City Guesser icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://virtualvacation.us/guess" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+            
+            
+            <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>GeoGuesser</h3>
+              <p>An online geography trivia game that immerses players in a random location from Google Street View. You explore the surroundings to gather visual clues, identifying languages, road signs, landscapes, or architecture. Using these observations, you guess your location on a world map, scoring points based on accuracy. Great for strengthening geography, spatial awareness, and problem-solving skills!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/geo-guesser-icon.png?raw=true"
+                  alt="GeoGuesser icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://geoguesser.io" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
 
+      <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Globe</h3>
+              <p>Every day, there is a new Mystery Country. Your goal is to guess the mystery country using the fewest number of guesses. Each incorrect guess will appear on the globe with a colour indicating how close it is to the Mystery Country. The hotter the colour, the closer you are to the answer. Great for geography practice and critical thinking!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/globe-icon.png?raw=true"
+                  alt="Globe icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://globle.org/" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
 
       </div>
     </section>
@@ -511,6 +564,7 @@
 
 </body>
 </html>
+
 
 
 
