--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1037,6 +1037,26 @@
           </div>
         </article>
 
+
+              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>World Geography Games</h3>
+              <p>Offers fun, interactive quizzes—covering countries, capitals, flags, etc. Great for sharpening geographic knowledge and boosting memory!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/world-geography-games-icon.png?raw=true"
+                  alt="World Geography Games icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://world-geography-games.com" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+            
             <article class="card">
           <div class="body">
             <div class="text">
@@ -1099,6 +1119,7 @@
 
 </body>
 </html>
+
 
 
 
