--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -753,7 +753,6 @@
 <li>⬜ Gray = letter not in the word</li>
                     </ul>  
                     <p>Great for spelling, vocabulary recall, logical thinking, and word structure!</p>
-                
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -762,7 +761,7 @@
                   alt="Wordle icon"
                   loading="lazy" decoding="async">
               </div>
-              <a href="https://wordly.org" target="_blank"><button class="play-btn">PLAY</button></a>
+              <a href="https://wordly.org/wordle-for-kids" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>
@@ -947,6 +946,7 @@
 
 </body>
 </html>
+
 
 
 
