--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -503,6 +503,24 @@
           </div>
         </article>
 
+                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Little Alchemy 2</h3>
+              <p>Mix items and create the world from scratch! Discover interesting items accompanied by funny descriptions and lose yourself exploring the huge, exciting library. Great for vocabulary!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/little-alchemy-icon.png?raw=true"
+                  alt="Little Alchemy 2 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://littlealchemy2.com" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
       <article class="card">
           <div class="body">
             <div class="text">
@@ -582,6 +600,7 @@
 
 </body>
 </html>
+
 
 
 
