--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -925,14 +925,14 @@
       <article class="card">
           <div class="body">
             <div class="text">
-              <h3>Globe</h3>
+              <h3>Globle</h3>
               <p>Every day, there is a new Mystery Country. Your goal is to guess the mystery country using the fewest number of guesses. Each incorrect guess will appear on the globe with a colour indicating how close it is to the Mystery Country. The hotter the colour, the closer you are to the answer. Great for geography practice and critical thinking!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
                 <img
                   src="https://github.com/Outreach360-Inc/games/blob/main/globe-icon.png?raw=true"
-                  alt="Globe icon"
+                  alt="Globle icon"
                   loading="lazy" decoding="async">
               </div>
               <a href="https://globle.org/" target="_blank"><button class="play-btn">PLAY</button></a>
@@ -946,6 +946,7 @@
 
 </body>
 </html>
+
 
 
 
