--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1012,6 +1012,25 @@
           </div>
         </article>
 
+
+
+                                        <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Murdle</h3>
+              <p>Solve a new murder mystery every day! Great for reading comprehension and critical thinking!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/murdle-icon.png?raw=true"
+                  alt="Murdle icon"
+                  loading="lazy" decoding="async">
+              </div>
+                            <a href="https://murdle.com" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
             
       <article class="card">
           <div class="body">
@@ -1119,6 +1138,7 @@
 
 </body>
 </html>
+
 
 
 
