--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -949,6 +949,25 @@
           </div>
         </article>
 
+
+                              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Smixed</h3>
+              <p>Build words using the featured letters. Eeach word must begin with a different featured letter. Great for strengthening spelling, vocabulary, and problem solving skills!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/smixed-icon.png?raw=true"
+                  alt="Smixed icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://smixed.com" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
             
       <article class="card">
           <div class="body">
@@ -1138,6 +1157,7 @@
 
 </body>
 </html>
+
 
 
 
