--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -472,6 +472,24 @@
       <article class="card">
           <div class="body">
             <div class="text">
+              <h3>Synonym/Antonym Challenge 1</h3>
+              <p>Spin for a word, then race to name either a synonym or an antonym. A playful way to build fast, flexible word knowledge!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/syn-ant1-icon.png?raw=true"
+                  alt="Synonym/Antonym Challenge 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/syn-ant1.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+            
+      <article class="card">
+          <div class="body">
+            <div class="text">
               <h3>English Tennis</h3>
               <p>Spin for a category or use your unit’s theme, grammar, word study topic, etc. The first student says a related word or sentence, then the second responds with another—like a rally! Keep going back and forth between the two students until someone gets stuck. Great for vocabulary, reinforcing language patterns, and quick thinking!</p>
             </div>
@@ -967,6 +985,7 @@
 
 </body>
 </html>
+
 
 
 
