--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -717,6 +717,23 @@
           </div>
         </article>
 
+                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Synonym/Antonym Challenge 2</h3>
+              <p>Spin for a word, then race to name either a synonym or an antonym. A playful way to build fast, flexible word knowledge!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/syn-ant2-icon.png?raw=true"
+                  alt="Synonym/Antonym Challenge 2 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/syn-ant2.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
 
       <article class="card">
           <div class="body">
@@ -1175,6 +1192,7 @@
 
 </body>
 </html>
+
 
 
 
