--- a/oxford5000.html
+++ b/oxford5000.html
@@ -4,7 +4,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
 <title>Oxford 5000</title>
+  <meta content="noindex, nofollow" name="robots"/>
+
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
 <style>
   body { 
     background: url('https://github.com/Outreach360-Inc/games/blob/main/oxford.png?raw=true') no-repeat center center fixed; 
