--- a/academic-word-list1.html
+++ b/academic-word-list1.html
@@ -5,6 +5,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Academic Word List</title>
+  <meta content="noindex, nofollow" name="robots"/>
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
 <style>
   body { 
     background: url('https://github.com/Outreach360-Inc/games/blob/main/academic-word-list.png?raw=true') no-repeat center center fixed; 
