--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -217,7 +217,8 @@
           </div>
         </article>
 
- <div class="body">
+                 <article class="card">
+          <div class="body">
             <div class="text">
               <h3>Who Wants to Be a Millionaire? – Vocabulary Edition</h3>
               <p>A quiz game that makes word learning exciting. Play with the Oxford 5000 (the most important high-frequency English words for learners) or the Academic Word List (essential academic vocabulary). Students play as one team, but the teacher calls on students in rotation to answer. To keep it fun, each member of the team may use each lifeline—phone a friend or poll the class—once per game for help.</p>
@@ -1212,6 +1213,7 @@
 
 </body>
 </html>
+
 
 
 
