--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -212,7 +212,7 @@
                   alt="Who Wants to Be a Millionaire? – Vocabulary Edition icon"
                   loading="lazy" decoding="async">
               </div>
-              <a href="https://github.com/Outreach360-Inc/games/millionaire-vocab.html" target="_blank"><button class="play-btn">PLAY</button></a>
+              <a href="https://outreach360-inc.github.io/games/millionaire-vocab.html" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>
@@ -1213,6 +1213,7 @@
 
 </body>
 </html>
+
 
 
 
