--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -241,7 +241,7 @@
           <div class="body">
             <div class="text">
               <h3>Description Detective 2</h3>
-              <p>Students guess mystery words using clues! Great for building vocabulary and critical thinking!</p>
+              <p>Students guess mystery words using clues! While only one answer is indicated, other answers with the same meaning are accepted. Great for building vocabulary and critical thinking!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1213,6 +1213,7 @@
 
 </body>
 </html>
+
 
 
 
