--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -267,8 +267,8 @@
             <div class="art-col">
               <div class="art-frame">
                 <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/word-ladder-icon.png?raw=true"
-                  alt="Word Ladder icon"
+                  src="https://github.com/Outreach360-Inc/games/blob/main/around-world-icon.png?raw=true"
+                  alt="Around the World icon"
                   loading="lazy" decoding="async">
               </div>
                  <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
@@ -1230,6 +1230,7 @@
 
 </body>
 </html>
+
 
 
 
