--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -262,7 +262,7 @@
           <div class="body">
             <div class="text">
               <h3>Around the World</h3>
-              <p>Two students race to answer first (by mic or chat). The winner moves on to face the next classmate, aiming to go all the way around the group. Play with prompts from  <a href="https://play.freerice.com/categories/english-vocabulary?level=1" target="_blank">Free Rice: English</a>, <a href="https://outreach360-inc.github.io/games/millionaire-vocab.html" target="_blank">Who Wants to Be a Millionaire? – Vocabulary Edition</a>, <a href="https://outreach360-inc.github.io/games/description-detective2.html" target="_blank">Description Detective 2</a>, <a href="https://outreach360-inc.github.io/games/odd3.html" target="_blank">Odd One Out 3</a> etc., or your own questions related to your unit language.</p>
+              <p>Two students race to answer first (by mic or chat). The winner moves on to face the next classmate, aiming to go all the way around the group. Play with prompts from  <a href="https://play.freerice.com/categories/english-vocabulary?level=1" target="_blank">Free Rice: English</a>, <a href="https://outreach360-inc.github.io/games/millionaire-vocab.html" target="_blank">Who Wants to Be a Millionaire? – Vocabulary Edition</a>, <a href="https://outreach360-inc.github.io/games/description-detective2.html" target="_blank">Description Detective 2</a>, <a href="https://outreach360-inc.github.io/games/odd3.html" target="_blank">Odd One Out 3,</a> etc., or your own questions related to your unit language.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1230,6 +1230,7 @@
 
 </body>
 </html>
+
 
 
 
