--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -665,6 +665,25 @@
         </article>
 
 
+                                                    <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Around the World</h3>
+              <p>Two students race to answer first (by mic or chat). The winner moves on to face the next classmate, aiming to go all the way around the group. Play with prompts from  <a href="https://play.freerice.com/categories/english-grammar?level=1" target="_blank">Free Rice: English Grammar</a>, <a href="https://play.freerice.com/categories/english-grammar?level=1" target="_blank">Free Rice: English Spelling</a>, <a href="https://outreach360-inc.github.io/games/odd2.html" target="_blank">Odd One Out 2,</a> etc., or your own questions related to your unit language.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/around-world-icon.png?raw=true"
+                  alt="Around the World icon"
+                  loading="lazy" decoding="async">
+              </div>
+                 <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+            
+
       <article class="card">
           <div class="body">
             <div class="text">
@@ -985,6 +1004,7 @@
 
 </body>
 </html>
+
 
 
 
