--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -492,7 +492,7 @@
           <div class="body">
             <div class="text">
               <h3>Around the World</h3>
-              <p>Two students race to answer first (by mic or chat). The winner moves on to face the next classmate, aiming to go all the way around the group. Play with prompts from  <a href="https://play.freerice.com/categories/english-grammar?level=1" target="_blank">Free Rice: English Grammar</a>, <a href="https://outreach360-inc.github.io/games/odd1.html" target="_blank">Odd One Out 1,</a> etc., or your own questions related to your unit language.</p>
+              <p>Two students race to answer first (by mic or chat). The winner moves on to face the next classmate, aiming to go all the way around the group. Play with prompts from  <a href="https://play.freerice.com/categories/english-grammar?level=1" target="_blank">Free Rice: English Grammar</a>, <a href="https://outreach360-inc.github.io/games/odd1.html" target="_blank">Odd One Out 1,</a> etc., or your own questions related to your unit language. Great for fun practice and versatility!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -822,6 +822,7 @@
 
 </body>
 </html>
+
 
 
 
