--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -392,6 +392,62 @@
         </article>
 
 
+                                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Agree or Disagree? 2</h3>
+              <p>Spin to reveal a statement. Students choose a side and defend it—perfect for speaking, quick writes, or short essays. A fun way to build debate skills, critical thinking, and vocabulary.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/agree2-icon.png?raw=true"
+                  alt="Agree or Disagree? 2 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/agree2.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+
+                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Would You Rather? 3</h3>
+              <p>Use the spinner for a fun and flexible speaking or writing activity where students choose between two options and <strong>explain their reasoning.</strong> Great for practicing opinions, reasoning, and discussion skills.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/rather3-icon.png?raw=true"
+                  alt="Would You Rather 3? icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/rather3.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+
+      <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>What Would You Do?</h3>
+              <p>A thoughtful speaking or writing activity where students respond to situations. Spin for a prompt. Students explain what they would do <strong>and why</strong>—building fluency, critical thinking, and conditional language skills.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/what-do-icon.png?raw=true"
+                  alt="What Would You Do? icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/what-do.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
                     <article class="card">
           <div class="body">
             <div class="text">
@@ -522,45 +578,6 @@
             </div>
           </div>
         </article>
-
-
-      <article class="card">
-          <div class="body">
-            <div class="text">
-              <h3>Would You Rather? 3</h3>
-              <p>Use the spinner for a fun and flexible speaking or writing activity where students choose between two options and <strong>explain their reasoning.</strong> Great for practicing opinions, reasoning, and discussion skills.</p>
-            </div>
-            <div class="art-col">
-              <div class="art-frame">
-                <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/rather3-icon.png?raw=true"
-                  alt="Would You Rather 3? icon"
-                  loading="lazy" decoding="async">
-              </div>
-              <a href="https://outreach360-inc.github.io/games/rather3.html" target="_blank"><button class="play-btn">PLAY</button></a>
-            </div>
-          </div>
-        </article>
-
-
-      <article class="card">
-          <div class="body">
-            <div class="text">
-              <h3>What Would You Do?</h3>
-              <p>A thoughtful speaking or writing activity where students respond to situations. Spin for a prompt. Students explain what they would do <strong>and why</strong>—building fluency, critical thinking, and conditional language skills.</p>
-            </div>
-            <div class="art-col">
-              <div class="art-frame">
-                <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/what-do-icon.png?raw=true"
-                  alt="What Would You Do? icon"
-                  loading="lazy" decoding="async">
-              </div>
-              <a href="https://outreach360-inc.github.io/games/what-do.html" target="_blank"><button class="play-btn">PLAY</button></a>
-            </div>
-          </div>
-        </article>
-
 
 
       <article class="card">
@@ -1230,6 +1247,7 @@
 
 </body>
 </html>
+
 
 
 
