--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -396,7 +396,7 @@
           <div class="body">
             <div class="text">
               <h3>Agree or Disagree? 2</h3>
-              <p>Spin to reveal a statement. Students choose a side and defend it—perfect for speaking, quick writes, or short essays. A fun way to build debate skills, critical thinking, and vocabulary.</p>
+              <p>Spin to reveal a statement. Students choose a side and <strong>defend it</strong>—perfect for speaking, quick writes, or short essays. A fun way to build persuasive language, reasoning, and speaking skills.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1247,6 +1247,7 @@
 
 </body>
 </html>
+
 
 
 
