--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -296,6 +296,24 @@
             </div>
           </div>
         </article>
+
+                                            <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Agree or Disagree? 1</h3>
+              <p>Spin to reveal a statement. Students choose a side and <strong>defend it</strong>—perfect for speaking, quick writes, or short essays. A fun way to build persuasive language, reasoning, and speaking skills.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/agree1-icon.png?raw=true"
+                  alt="Agree or Disagree? 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/agree1.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
             
       <article class="card">
           <div class="body">
@@ -1004,6 +1022,7 @@
 
 </body>
 </html>
+
 
 
 
