--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -579,6 +579,23 @@
           </div>
         </article>
 
+      <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Oxford Phrase List Role Plays 2</h3>
+              <p>The Oxford Phrase List is a collection of the most common and useful phrases in English—expressions learners need for real conversations. Spin to get six phrases, then act out a role-play using them naturally. A fun way to build fluency, confidence, and real-life communication skills.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/phrase-plays2-icon.png?raw=true"
+                  alt="Oxford Phrase List Role Plays 2 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/phrase-plays2.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
 
       <article class="card">
           <div class="body">
@@ -1247,6 +1264,7 @@
 
 </body>
 </html>
+
 
 
 
