--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -583,7 +583,7 @@
           <div class="body">
             <div class="text">
               <h3>Oxford Phrase List Role Plays 2</h3>
-              <p>The Oxford Phrase List is a collection of the most common and useful phrases in English—expressions learners need for real conversations. Spin to get six phrases, then act out a role-play using them naturally. A fun way to build fluency, confidence, and real-life communication skills.</p>
+              <p>The Oxford Phrase List is a collection of the most common and useful phrases in English—expressions learners need for real conversations. Spin to get six phrases, then act out a role-play using them naturally. <strong>Sb is an abbreviation for somebody. Sth is an abbreviation for something.</strong> A fun way to build fluency, confidence, and real-life communication skills.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1264,6 +1264,7 @@
 
 </body>
 </html>
+
 
 
 
