--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -297,6 +297,25 @@
           </div>
         </article>
 
+
+                              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Five-Word Story 1</h3>
+              <p>Spin for a topic, then create a complete story using only five words. This fast, creative challenge pushes students to be imaginative and concise, while practicing vocabulary and grammar in a fun way. Great for quick speaking and warm-ups!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/5word1.png?raw=true"
+                  alt="Five-Word Story 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/5word1.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
                                             <article class="card">
           <div class="body">
             <div class="text">
@@ -1039,6 +1058,7 @@
 
 </body>
 </html>
+
 
 
 
