--- a/5word2.html
+++ b/5word2.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Five Word Story 2</title>
+  <title>Five-Word Story 2</title>
   <meta content="noindex, nofollow" name="robots"/>
   <link rel="icon" type="image/png" sizes="32x32"
         href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
@@ -79,7 +79,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Five Word Story 2</h1>
+    <h1>Five-Word Story 2</h1>
     <button onclick="spinWord()">Spin!</button>
     <div id="story"></div>
   </div>
