--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -397,6 +397,7 @@
             <div class="text">
               <h3>Agree or Disagree? 2</h3>
               <p>Spin to reveal a statement. Students choose a side and <strong>defend it</strong>—perfect for speaking, quick writes, or short essays. A fun way to build persuasive language, reasoning, and speaking skills.</p>
+            <p><strong>You can use the same statements to hold a class debate.</strong></p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1282,6 +1283,7 @@
 
 </body>
 </html>
+
 
 
 
