--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -316,6 +316,26 @@
           </div>
         </article>
 
+
+            
+                                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Law & Order: Kid Edition</h3>
+              <p>Spin for a scenario, then bring it to life! Try a <strong>mini mock trial</strong> (act it out as judge, jury, lawyers, witnesses), a <strong>sentencing circle (class decides a fair punishment)</strong>, or a <strong>punishment vs. forgiveness debate</strong>. <strong>Rank crimes</strong> from least to most serious, say a punishment and <strong>discuss if it's fair</strong>, create a <strong>news report</strong>, run a <strong>police investigation</strong> with the students' own clues and statements, or make a <strong>comic strip/storyboard</strong> of the case. Great for speaking, writing, critical thinking, creativity, and teamwork.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/law-order-kid-icon.png?raw=true"
+                  alt="Law & Order: Kid Edition icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/law-order-kid.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
                                             <article class="card">
           <div class="body">
             <div class="text">
@@ -1058,6 +1078,7 @@
 
 </body>
 </html>
+
 
 
 
